k8s/marketing-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-marketing
  namespace: cf-marketing
  annotations:
    argocd-image-updater.argoproj.io/image-list: site=git.lupulup.com/admin/marketing-site
    argocd-image-updater.argoproj.io/site.update-strategy: latest
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-marketing
  template:
    metadata:
      labels:
        app: cf-marketing
    spec:
      imagePullSecrets:
        - name: gitea-registry
      containers:
        - name: site
          image: git.lupulup.com/admin/marketing-site:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
