k8s/marketing-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-marketing
  namespace: cf-marketing
spec:
  selector:
    app: cf-marketing
  ports:
    - port: 80
      targetPort: 80
