k8s/marketing-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-marketing
  namespace: cf-marketing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: cf.lupulup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cf-marketing
                port:
                  number: 80
